--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "Meitalic",
+    "name": "davidovicisoftware/meitalic",
     "type": "project",
     "description": "An E-Commerce site for a beauty prodcucts line written in laravel",
     "keywords": ["laravel", "framework"],
@@ -8,7 +8,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "stripe/stripe-php": "^17.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
