--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-sluggable": "^3.7",
         "stripe/stripe-php": "^17.1"
     },
     "require-dev": {
