--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "rollup-plugin-analyzer": "^4.0.0",
         "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@stripe/stripe-js": "^7.3.0"
     }
 }
