--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Meitalic
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -51,6 +51,7 @@ MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
+ADMIN_EMAIL=admin@meitalic.test
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
@@ -63,3 +64,26 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+STRIPE_KEY=
+STRIPE_SECRET=
+STRIPE_WEBHOOK_SECRET=
+
+CART_TAX_RATE=
+
+UPS_LICENSE=
+UPS_USER=
+UPS_PASS=
+UPS_ACCOUNT=
+
+SHIPPING_ORIGIN_LINE=
+SHIPPING_ORIGIN_CITY=
+SHIPPING_ORIGIN_STATE=
+SHIPPING_ORIGIN_POSTAL=
+SHIPPING_ORIGIN_COUNTRY=
+
+FREE_SHIPPING_THRESHOLD=
+
+
+
+
