--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "npm ci && vite build --outDir build",
+        "build": "npm ci && vite build --outDir public/build",
         "build:prod": "npm ci && vite build --emptyOutDir --outDir /home/u161705717/domains/meitalic.com/public_html/build"
     },
     "devDependencies": {
