added backup and restore db scripts

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
+BACKUP_DIR=storage/app/database
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
