updated services config and .env.example

--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,10 @@ SHIPPING_ORIGIN_COUNTRY=
 
 FREE_SHIPPING_THRESHOLD=
 
+SHIPSTATION_API_KEY=
+SHIPSTATION_API_SECRET=
+SHIPSTATION_API_BASE=
+
 
 
 
