halfway through updating shipstation integration

--- a/.env.example
+++ b/.env.example
@@ -90,6 +90,6 @@ SHIPSTATION_API_KEY=
 SHIPSTATION_API_SECRET=
 SHIPSTATION_API_BASE=
 
-
+SHIPSTATION_CARRIERS=ups,usps,fedex,dhl_express,globalpost,seko_ltl
 
 
